save data when input is less than 4 bytes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "spkr-io.h": "c"
+        "spkr-io.h": "c",
+        "spkr-fs.h": "c",
+        "spkr-fifo.h": "c"
     }
 }
